--- a/css/style-light.css
+++ b/css/style-light.css
@@ -1468,3 +1468,23 @@ header .header-mobile {
     padding: 0; }
   .portfolio-section .portfolio-filter ul {
     border: none; } }
+    body.dark-mode {
+      background-color: #121212;
+      color: #ffffff;
+  }
+  
+  .header-main.dark-mode {
+      background-color: #1e1e1e;
+  }
+  
+  .nav-menu ul li a.dark-mode {
+      color: #ffffff;
+  }
+  
+  .service-item.dark-mode {
+      background-color: #2c2c2c;
+      color: #ffffff;
+  }
+  
+  /* Customize other elements for dark mode */
+  
