--- a/css/style-light.css
+++ b/css/style-light.css
@@ -1468,9 +1468,10 @@ header .header-mobile {
     padding: 0; }
   .portfolio-section .portfolio-filter ul {
     border: none; } }
-    body.dark-mode {
+  .body.dark-mode {
+
       background-color: #121212;
-      color: #ffffff;
+      color: #2e2e2e;
   }
   
   .header-main.dark-mode {
@@ -1478,12 +1479,12 @@ header .header-mobile {
   }
   
   .nav-menu ul li a.dark-mode {
-      color: #ffffff;
+      color: #2b2b2b;
   }
   
   .service-item.dark-mode {
       background-color: #2c2c2c;
-      color: #ffffff;
+      color: #404040;
   }
   
   /* Customize other elements for dark mode */
