--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -11,12 +11,25 @@
 
     }
     .about-section h3 {
-        color: aliceblue;
+        color: rgb(255, 255, 255);
 
     }
     .contact-section {
         background-color: #2d2d2d;
         color: aliceblue;
     }
- 
+    .service-item h4 {
+        color:aliceblue;
+    }
+    .about-section .about .about-info ul li span.title {
+        font-family: "Playfair Display", serif;
+        font-size: 16px;
+        font-weight: 700;
+        letter-spacing: .5px;
+        border-bottom: 2px solid rgb(255, 255, 255);
+        position: relative;
+        display: inline-block;
+        margin-right: 15px;
+        padding-bottom: 2px;
+        color: #ffffff; }
 }
