--- a/css/style-light.css
+++ b/css/style-light.css
@@ -854,12 +854,12 @@ header .header-mobile {
       font-size: 16px;
       font-weight: 700;
       letter-spacing: .5px;
-      border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+      border-bottom: 2px solid rgba(0, 0, 0, 0.949);
       position: relative;
       display: inline-block;
       margin-right: 15px;
       padding-bottom: 2px;
-      color: #222; }
+      color: #0e0e0e; }
       .about-section .about .about-info ul li span.title:after {
         content: ':';
         position: absolute;
