--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -32,4 +32,12 @@
         margin-right: 15px;
         padding-bottom: 2px;
         color: #ffffff; }
+        .blog-section{
+            background-color: #2d2d2d;
+            color:aliceblue;
+        }
+        .blog-section h3{
+            background-color: #2d2d2d;
+            color:aliceblue;
+        }
 }
